--- a/src/assets/Styles/index.css
+++ b/src/assets/Styles/index.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.search-color {
+  background-color: #f5f7fa;
+}
+
+input[type="text"] {
+  font-size: 8px;
+}
+input::placeholder {
+  color: #707c88;
+}
+
+.header-font {
+  font-size: 8px;
+}
+
+.header-text:hover {
+  color: #ff5353;
+  cursor: pointer;
+}
+
+.header-text {
+  color: #707c88;
+}
